# EX4-CPP

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
